[metadata]
name = umn-async-utils
version = attr: umn_async_utils.__version__
description = Various async utilities
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Michael Hall

url = https://github.com/unified-moderation-network/umn-async-utils
project_urls =
    Issue Tracker = https://github.com/unified-moderation-network/umn-async-utils/issues
    Source Code = https://github.com/unified-moderation-network/umn-async-utils
classifiers =
    Framework :: AsyncIO
    Intended Audience :: Developers
    Natural Language :: English
    Typing :: Typed
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
license_files =
    LICENSE
    NOTICE
    LICENSE_cpython

[options]
packages = find_namespace:
python_requires = >=3.10.0
include_package_data = True

[options.package_data]
umn-async-utils = py.typed

[options.packages.find]
include =
    umn_async_utils
    umn_async_utils.*